# autotestman

./: README.md
Day1/: setup.py  setup_project.sh
Day1/uqap-lesson-01/: .gitignore  CLEANUP_SUMMARY.md  QUICK_FIX.md  README.md  TROUBLESHOOTING.md  check_metrics.sh  cleanup.sh  get_wsl_ip.sh  keep_metrics_updated.sh  pyproject.toml  setup_windows_port_forwarding.ps1  verify_cleanup.sh  verify_services.sh
Day1/uqap-lesson-01/config/: api_config.json  dashboard_config.json  services.json
Day1/uqap-lesson-01/docs/: setup_complete.html
Day1/uqap-lesson-01/scripts/: check_services.sh  run_demo.sh  run_tests.sh  start_api.sh  start_dashboard.sh  stop_api.sh  stop_dashboard.sh
Day1/uqap-lesson-01/src/api/: __init__.py  server.py
Day1/uqap-lesson-01/src/automation/: __init__.py  hello.py
Day1/uqap-lesson-01/src/dashboard/: __init__.py  app.py
Day1/uqap-lesson-01/tests/: __init__.py  test_hello.py
Day2/lesson_02_assertions/: .gitignore  README.md  cleanup.sh  setup.py
Lesson3/lesson_03_json_parsing/: README.md  dashboard_server.py  demo_runner.py
Lesson4/uqap-lesson-04/: .gitignore  README.md  cleanup.sh  pyproject.toml
lesson10/: .gitignore  cleanup.sh  setup.py
lesson10/lesson_10_data_validator/: README.md  data_validator.py
lesson11/: .gitignore  cleanup.sh  setup_lesson.py
lesson11/lesson11_browser_drivers/: .gitignore  README.md  flow_visualizer.html  requirements.txt
lesson20/: setup.py
lesson39/: setup.py
lesson56/: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  cleanup.sh  requirements.txt  setup.py  verify_result.py
(+388 files in other folders)
